--- a/selling-used-items-app-frontend/src/app/common/edit-advertisement/edit-advertisement.component.html
+++ b/selling-used-items-app-frontend/src/app/common/edit-advertisement/edit-advertisement.component.html
@@ -1,18 +1,16 @@
 <div class="editAdvertisementForm">
     <h2>Edit Advertisement</h2>
-    <form>
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" value="Prodaja telefona" required>
+        <input type="text" id="name" name="name" value="Prodaja telefona" [(ngModel)]="advertisement.name" required>
 
         <label for="price">Price:</label>
-        <input type="text" id="price" name="price" value="2000" required>
+        <input type="text" id="price" name="price" value="2000" required [(ngModel)]="advertisement.price">
 
         <label for="description">Description:</label>
-        <textarea id="description" name="description" required>Nema boljeg</textarea>
+        <textarea id="description" name="description" required [(ngModel)]="advertisement.description"></textarea>
 
         <label for="location">Location:</label>
-        <input type="text" id="location" name="location" value="Beograd" required>
+        <input type="text" id="location" name="location" value="Beograd" required [(ngModel)]="advertisement.location">
 
-        <input type="submit" value="Submit">
-    </form>
+        <input type="submit" value="Submit" (click)="onSubmit()">
 </div>
