Implemented approve and decline comments

--- a/selling-used-items-app-frontend/src/app/administrator/accept-decline-comment/accept-decline-comment.component.html
+++ b/selling-used-items-app-frontend/src/app/administrator/accept-decline-comment/accept-decline-comment.component.html
@@ -1,24 +1,22 @@
 <table>
-    <thead>
-        <tr>
-            <th>ID komentara</th>
-            <th>Sadržaj komentara</th>
-            <th>Approve</th>
-            <th>Decline</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>1</td>
-            <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
-            <td><button class="approve" onclick="approveComment(1)">Approve</button></td>
-            <td><button class="decline" onclick="declineComment(1)">Decline</button></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</td>
-            <td><button class="approve" onclick="approveComment(2)">Approve</button></td>
-            <td><button class="decline" onclick="declineComment(2)">Decline</button></td>
-        </tr>
-    </tbody>
+  <thead>
+    <tr>
+      <th>ID komentara</th>
+      <th>Sadržaj komentara</th>
+      <th>Approve</th>
+      <th>Decline</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let comment of comments">
+      <td>{{ comment.id }}</td>
+      <td>{{ comment.message }}</td>
+      <td>
+        <button *ngIf="!comment.isApproved" class="approve" (click)="approveComment(comment.id)">Approve</button>
+      </td>
+      <td>
+        <button *ngIf="comment.isApproved" class="decline" (click)="declineComment(comment.id)">Decline</button>
+      </td>
+    </tr>
+  </tbody>
 </table>
