--- a/selling-used-items-app-frontend/src/app/administrator/accept-decline-comment/accept-decline-comment.component.css
+++ b/selling-used-items-app-frontend/src/app/administrator/accept-decline-comment/accept-decline-comment.component.css
@@ -3,6 +3,7 @@ table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    border: 1px solid #ddd; /* dodajemo granicu */
 }
 
 /* Stil za zaglavlje tablice */
@@ -14,6 +15,7 @@ thead {
 th {
     padding: 10px;
     text-align: left;
+    border: 1px solid #ddd; /* dodajemo granicu */
 }
 
 /* Stil za redove u telu tablice */
@@ -24,6 +26,7 @@ tbody tr:nth-child(even) {
 /* Stil za sve ćelije u telu tablice */
 td {
     padding: 10px;
+    border: 1px solid #ddd; /* dodajemo granicu */
 }
 
 /* Stil za dugmad za odobravanje */
