Implemented user reviews on profile

--- a/selling-used-items-app-frontend/src/app/common/advertisement-display/advertisement-display.component.html
+++ b/selling-used-items-app-frontend/src/app/common/advertisement-display/advertisement-display.component.html
@@ -22,9 +22,15 @@
 
   <div class="form-group">
     <label for="commentaries">Reviews:</label>
-    <div class="static-text"></div>
+    <div class="static-text">
+      <ul>
+        <li *ngFor="let comment of comments">
+          <div>{{ '- ' + comment.message + ' ' + '&#9733;'.repeat(comment.rating) }}</div>
+        </li>
+      </ul>
+    </div>
   </div>
-
+  
   <hr>
 
   <div class="form-group">
