Implemented sending reports

--- a/selling-used-items-app-frontend/src/app/common/advertisement-display/advertisement-display.component.html
+++ b/selling-used-items-app-frontend/src/app/common/advertisement-display/advertisement-display.component.html
@@ -41,7 +41,7 @@
   <hr>
 
   <div class="button-group">
-    <button *ngIf="advertisement.status === 'Available'" class="purchase-button" (click)="purchaseAdvertisement()">Reserve</button>
+    <button *ngIf="advertisement.advertisementStatus === 0" class="purchase-button" (click)="purchaseAdvertisement()">Reserve</button>
     <button class="back-button" (click)="navigateToAdvertisements()">Back</button>
   </div>    
 </div>
