--- a/selling-used-items-app-frontend/src/app/common/my-advertisement/my-advertisement.component.html
+++ b/selling-used-items-app-frontend/src/app/common/my-advertisement/my-advertisement.component.html
@@ -28,10 +28,10 @@
                     <button *ngIf="ad.advertisementStatus === 0" class="delete-button" (click)="deleteAdvertisement(ad.id)">Delete</button>
                 </td>
                 <td *ngIf="shouldShowConfirmRefuse()">
-                    <button *ngIf="ad.advertisementStatus === 2" class="edit-button">Confirm</button>
+                    <button *ngIf="ad.advertisementStatus === 1" class="edit-button" (click)="confirm(ad)">Confirm</button>
                 </td>
                 <td *ngIf="shouldShowConfirmRefuse()">
-                    <button *ngIf="ad.advertisementStatus === 2" class="delete-button">Refuse</button>
+                    <button *ngIf="ad.advertisementStatus === 1" class="delete-button" (click)="refuse(ad)">Refuse</button>
                 </td>
                 <td>Milos Tomic</td>
             </tr>
