--- a/selling-used-items-app-frontend/src/app/home/home.component.html
+++ b/selling-used-items-app-frontend/src/app/home/home.component.html
@@ -23,11 +23,11 @@
         <button class="reportUser" (click)="navigateToReportUser()">
             <span class="reportUserIcon"></span>
         </button>
-        <button class="rateUser">
-            <span class="rateUserIcon" (click)="navigateToRateUser()"></span>
-        </button>
-        <button class="approveComment">
-            <span class="approveCommentIcon" (click)="navigateToComments()"></span>
+        <button class="rateUser" (click)="navigateToRateUser()">
+            <span class="rateUserIcon" ></span>
+        </button>     
+        <button class="approveComment" (click)="navigateToComments()">
+            <span class="approveCommentIcon" ></span>
         </button>
     </div>
 </div>
